Reduce the amount of options

--- a/discord_twitter_webhooks/templates/feed.html
+++ b/discord_twitter_webhooks/templates/feed.html
@@ -11,13 +11,47 @@
         <br/>
         {% include "add/2_what_to_send.html" %}
         <br/>
-        {% include "add/infobox.html" %}
-        <br/>
-        {% include "add/4_embed_settings.html" %}
+        <div class="p-2 border border-dark" id="embed_settings">
+            <h3>Send embed</h3>
+            <div class="form-check form-switch">
+                <label class="form-check-label" for="send_as_embed">Send as embed?</label>
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       name="send_as_embed"
+                       id="send_as_embed"
+                       {% if settings.send_as_embed %}checked{% endif %}
+                       value="True"/>
+            </div>
+        </div>
         <br/>
         {% include "add/5_send_link.html" %}
         <br/>
-        {% include "add/send_text.html" %}
+        <div class="p-2 border border-dark" id="link_settings">
+            <h3>Send as text</h3>
+            {# Send text #}
+            <div class="form-check form-switch">
+                <label class="form-check-label" for="send_as_text">Send as text?</label>
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       name="send_as_text"
+                       id="send_as_text"
+                       {% if settings.send_as_text %}checked{% endif %}
+                       value="True"/>
+            </div>
+            <div class="form-check form-switch">
+                <label class="form-check-label" for="send_as_text_username">Append username before text?</label>
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       name="send_as_text_username"
+                       id="send_as_text_username"
+                       {% if settings.send_as_text_username %}checked{% endif %}
+                       value="True"/>
+            </div>
+        </div>
+
         <br/>
         {% include "add/6_translate.html" %}
         <br/>
