--- a/discord_twitter_webhooks/templates/add/6_translate.html
+++ b/discord_twitter_webhooks/templates/add/6_translate.html
@@ -11,7 +11,10 @@
                value="True"
                {% if settings.translate %}checked{% endif %}
         />
-        <div id="translate_help" class="form-text">Whether or not you want to translate the message.</div>
+        <div id="translate_help" class="form-text">Whether or not you want to translate the message. Note that you need
+            to add a DeepL API key in the <a class="text-muted" href="{{ url_for('settings') }}">settings</a> for this
+            to work.
+        </div>
     </div>
     <br/>
 
