Change default Nitter Instance as nitter.net removed theirs

--- a/discord_twitter_webhooks/templates/settings.html
+++ b/discord_twitter_webhooks/templates/settings.html
@@ -28,10 +28,12 @@
                         <br/>
                         <br/>
                         I highly recommend using your own instance, it is very easy to set up
-                        and you can find instructions <a class="text-muted" href="">here</a>.
+                        and you can find instructions <a class="text-muted"
+                                                         href="https://github.com/zedeus/nitter">here</a>.
                         <br/>
                         It will be faster, more private, and you won't clog down the public
                         instance.
+                        <br/>
                     </div>
                 </div>
             </div>
