Replaced "webhook" with "username" to accurately reflect the input field's purpose.
This fixes #121

--- a/discord_twitter_webhooks/templates/add/1_feed_details.html
+++ b/discord_twitter_webhooks/templates/add/1_feed_details.html
@@ -28,7 +28,7 @@
               rows="3"
       >{% for name in settings.usernames %}{{ name }}{% if not loop.last %}&#10;{% endif %}{% endfor %}</textarea>
             <div id="usernames_help" class="form-text">
-                Twitter usernames to follow, separate each webhook with a new line. You can add new line with <code>Shift+Enter</code>.
+                Twitter usernames to follow, separate each username with a new line. You can add new line with <code>Shift+Enter</code>.
             </div>
         </div>
     </div>
