--- a/discord_twitter_webhooks/templates/feed.html
+++ b/discord_twitter_webhooks/templates/feed.html
@@ -7,9 +7,9 @@
 {% block content %}
     <form name="add" action="{{ url_for('feed') }}" method="post">
         <input type="hidden" id="uuid" name="uuid" value="{{ settings.uuid }}"/>
-        {% include "add/1_feed_details.html" %}
+        {% include "add/feed_details.html" %}
         <br/>
-        {% include "add/2_what_to_send.html" %}
+        {% include "add/what_to_send.html" %}
         <br/>
         <div class="p-2 border border-dark" id="embed_settings">
             <h3>Send embed</h3>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <br/>
-        {% include "add/5_send_link.html" %}
+        {% include "add/send_link.html" %}
         <br/>
         <div class="p-2 border border-dark" id="link_settings">
             <h3>Send as text</h3>
@@ -60,9 +60,11 @@
         </div>
 
         <br/>
-        {% include "add/6_translate.html" %}
+        {% include "add/translate.html" %}
         <br/>
-        {% include "add/8_other.html" %}
+        {% include "add/whitelist.html" %}
+        <br/>
+        {% include "add/other.html" %}
         <br/>
         <div class="d-md-flex">
             <button class="btn btn-dark btn-sm">Add feed</button>
