--- a/discord_twitter_webhooks/templates/add/other.html
+++ b/discord_twitter_webhooks/templates/add/other.html
@@ -50,4 +50,41 @@
                            href="{{ global_settings.nitter_instance }}/elonmusk/">{{ global_settings.nitter_instance }}/elonmusk/</a>.
         </div>
     </div>
+
+    {# Use Piped/Invidious for YouTube videos #}
+    <div class="form-check form-switch">
+        <label class="form-check-label" for="replace_youtube">Use Piped/Invidious for YouTube videos</label>
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               id="replace_youtube"
+               name="replace_youtube"
+               value="True"
+               {% if settings.replace_youtube %}checked{% endif %}
+        />
+        <div id="replace_youtube_help" class="form-text">Replace YouTube links with links
+            to {{ global_settings.piped_instance }}.
+            For example, <a class="text-muted" href="https://www.youtube.com/watch?v=whPh_PasI58">https://www.youtube.com/watch?v=whPh_PasI58</a>
+            will become <a class="text-muted"
+                           href="{{ global_settings.piped_instance }}/watch?v=whPh_PasI58">{{ global_settings.piped_instance }}/watch?v=whPh_PasI58</a>.
+        </div>
+    </div>
+
+    {# Use Teddit/Libreddit for Reddit links #}
+    <div class="form-check form-switch">
+        <label class="form-check-label" for="replace_reddit">Use Teddit/Libreddit for Reddit links</label>
+        <input class="form-check-input"
+               type="checkbox"
+               role="switch"
+               id="replace_reddit"
+               name="replace_reddit"
+               value="True"
+               {% if settings.replace_reddit %}checked{% endif %}
+        />
+        <div id="replace_reddit_help" class="form-text">Replace links to Twitter with links to Nitter.
+            For example, <a class="text-muted" href="https://twitter.com/elonmusk/">https://twitter.com/elonmusk/</a>
+            will become <a class="text-muted"
+                           href="{{ global_settings.nitter_instance }}/elonmusk/">{{ global_settings.nitter_instance }}/elonmusk/</a>.
+        </div>
+    </div>
 </div>
